--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <a class="navbar-brand" href="#">Calendar with Vanilla JS</a>
   </nav>
   <div class="container">
-    <form>
+    <form class="form-calendar">
       <div class="row">
         <div class="col-md-4">
           <div class="form-group row">
             <label for="startDate" class="col-sm-4 col-form-label">Start Date</label>
             <div class="col-sm-8">
-              <input type="date" class="form-control" id="startDate" required>
+              <input type="date" class="form-control" name="startDate" id="startDate" required>
             </div>
           </div>
         </div>
@@ -27,7 +27,7 @@
           <div class="form-group row">
             <label for="days" class="col-sm-4 col-form-label">Days</label>
             <div class="col-sm-8">
-              <input type="number" class="form-control" id="days" min="0" value="0" required>
+              <input type="number" class="form-control" name="days" min="0" value="0" required>
             </div>
           </div>
         </div>
@@ -35,7 +35,7 @@
           <div class="form-group row">
             <label for="days" class="col-sm-4 col-form-label">Country code</label>
             <div class="col-sm-8">
-              <select class="form-control" id="countryCode">
+              <select class="form-control" name="countryCode">
                 <option value="US">US</option>
               </select>
             </div>
