--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <div id="results"></div>
   </div>
 
+  <script src="calendar.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
