--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
             <label for="days" class="col-sm-4 col-form-label">Country code</label>
             <div class="col-sm-8">
               <select class="form-control" name="countryCode">
-                <option value="US">US</option>
+                <option value="AR">Argentina</option>
+                <option value="AW">Aruba</option>
+                <option value="BO">Bolivia</option>
+                <option value="CH">Switzerland</option>
+                <option value="CU">Cuba</option>
               </select>
             </div>
           </div>
@@ -49,6 +53,7 @@
   </div>
 
   <script src="calendar.js"></script>
+  <script src="holiday.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
