display decription of holiday

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <option value="BO">Bolivia</option>
                 <option value="CH">Switzerland</option>
                 <option value="CU">Cuba</option>
+                <option value="CO">Colombia</option>
+                <option value="CR">Costa Rica</option>
+                <option value="DO">Dominican</option>
+                <option value="PE">Peru</option>
               </select>
             </div>
           </div>
