--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <option value="CO">Colombia</option>
                 <option value="CR">Costa Rica</option>
                 <option value="DO">Dominican</option>
-                <option value="PE">Peru</option>
+                <option value="PE" selected>Peru</option>
               </select>
             </div>
           </div>
@@ -57,7 +57,6 @@
   </div>
 
   <script src="calendar.js"></script>
-  <script src="holiday.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
